--- a/plants/sass/_base.scss
+++ b/plants/sass/_base.scss
@@ -164,9 +164,13 @@ h3 {
     line-height: 50px;
     list-style: none;
 
-    @include media-mobile {
+    @media (max-width: 670px) {
         display: none;
     }
+
+    // @include media-mobile {
+    //     display: none;
+    // }
 
     >* {
         padding-left: 47px;
@@ -424,7 +428,7 @@ h3 {
 
     &__buttons {
         display: flex;
-        justify-content: space-between;
+        justify-content: start;
         align-items: center;
         flex-wrap: wrap;
         row-gap: 9px;
@@ -474,8 +478,13 @@ h3 {
             row-gap: 38px;
         }
 
-        @include media-mobile {
+        @media (max-width: 670px) {
             justify-content: center;
+            padding-bottom: 0;
+        }
+
+        @include media-mobile {
+            // justify-content: center;
             row-gap: 34px;
         }
     }
@@ -549,13 +558,20 @@ h3 {
         justify-content: space-between;
         padding: 40px 109px 129px 109px;
 
+        @media (max-width: 1000px) {
+            padding-bottom: 0;
+        }
+
         @include media-tablet {
             padding: 40px 50px 0 50px;
         }
 
-        @include media-mobile {
+        @media (max-width: 600px) {
             flex-direction: column;
             justify-content: center;
+        }
+
+        @include media-mobile {
             padding: 25px 25px 40px 25px;
         }
     }
@@ -687,10 +703,15 @@ h3 {
     align-items: end;
     background: url("../assets/images/leafs_small.png") right -10px bottom -20px/auto no-repeat;
 
-    @include media-tablet {
+    @media (max-width: 1000px) {
         margin-top: 100px;
         background: url("../assets/images/leafs_small.png") right -9px bottom 81px/auto no-repeat;
     }
+
+    // @include media-tablet {
+    //     margin-top: 100px;
+    //     background: url("../assets/images/leafs_small.png") right -9px bottom 81px/auto no-repeat;
+    // }
 
     @include media-mobile {
         margin: 20px auto 0;
@@ -707,11 +728,17 @@ h3 {
         color: $color-text-add;
         text-align: right;
 
-        @include media-tablet {
+        @media (max-width: 1000px) {
             font-size: 2.5rem;
             line-height: 3.5rem;
             margin-bottom: 28px;
         }
+
+        // @include media-tablet {
+        //     font-size: 2.5rem;
+        //     line-height: 3.5rem;
+        //     margin-bottom: 28px;
+        // }
 
         @include media-mobile {
             max-width: 230px;
@@ -731,9 +758,13 @@ h3 {
         font-weight: 700;
         background-color: $color-light;
 
-        @include media-tablet {
+        @media (max-width: 1000px) {
             margin-bottom: 297px;
         }
+
+        // @include media-tablet {
+        //     margin-bottom: 297px;
+        // }
 
         @include media-mobile {
             width: 121px;
