--- a/plants/sass/_base.scss
+++ b/plants/sass/_base.scss
@@ -161,7 +161,7 @@ h3 {
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 50px;
+    line-height: 5rem;
     list-style: none;
 
     @media (max-width: 670px) {
