--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -476,7 +476,7 @@ h3 {
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 50px;
+  line-height: 5rem;
   list-style: none;
 }
 @media (max-width: 670px) {
@@ -1209,63 +1209,123 @@ h3 {
 @media (max-width: 670px) {
   .hamburger {
     display: inline-block;
+    position: relative;
+    z-index: 30;
     width: 40px;
     height: 26px;
-    border-top: 2px solid #717171;
-    border-bottom: 2px solid #717171;
     cursor: pointer;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .hamburger.active {
+    position: fixed;
+    top: 50px;
+    right: 30px;
   }
   .hamburger__line {
     display: inline-block;
-    height: 10px;
+    height: 9px;
     width: 100%;
+    margin-top: 4px;
     vertical-align: middle;
     border-top: 2px solid #717171;
     border-bottom: 2px solid #717171;
   }
-  .popup {
-    position: fixed;
-    top: 100px;
-    right: -100%;
+  .hamburger__line::before,
+  .hamburger__line::after {
+    position: absolute;
     width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 100;
+    height: 1.5px;
+    background-color: #717171;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .hamburger__line::before {
+    content: "";
+    top: 0;
+  }
+  .hamburger__line::after {
+    content: "";
+    bottom: 0;
+  }
+  .hamburger__line.active {
+    border: none;
+    transition: 0.4s;
+    background-color: transparent;
+  }
+  .hamburger__line.active::before {
+    top: 0;
+    transform: rotate(45deg);
+  }
+  .hamburger__line.active::after {
+    top: 0;
+    transform: rotate(-45deg);
+  }
+  .nav {
+    padding-top: 100px;
+    position: fixed;
+    top: 0;
+    z-index: 20;
     display: flex;
+    flex-flow: column;
+    justify-content: start;
+    height: 100%;
+    background-color: #ffffff;
+    overflow-y: auto;
+    right: -100%;
+    -webkit-transition: 0.8s;
+    -moz-transition: 0.8s;
+    -o-transition: 0.8s;
+    transition: 0.8s;
+  }
+  .nav__item {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  }
+  .nav__item:hover {
+    border-color: #E3E1D5;
+  }
+  .nav__link {
+    padding: 18px 35px;
+    font-family: "Inter", Verdana, sans-serif;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #010201;
+  }
+  .nav__link:hover {
+    color: #E06733;
+    text-shadow: 0.5px 0 0 #E06733;
+    transition: 0.4s;
+  }
+  .header__navigation.active .nav {
+    right: 0;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .burger-menu_overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
     transition: 0.3s;
   }
-  .popup.open {
-    right: 0;
-  }
-}
-@media (max-width: 670px) {
-  .popup .nav {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    padding: 50px 0;
-    overflow: auto;
-  }
-  .popup .nav > li {
-    width: 100%;
-  }
-  .popup .nav > li > a {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-    font-size: 20px;
-    font-weight: bold;
-    color: #3f3f3f;
-  }
-  .popup .nav > li > a:hover {
-    background-color: rgba(122, 82, 179, 0.1);
-  }
-  body.noscroll {
-    overflow: hidden;
+  .header__navigation.active .burger-menu_overlay {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
