--- a/plants/sass/_hamburger.scss
+++ b/plants/sass/_hamburger.scss
@@ -28,11 +28,11 @@
         //     background-color: rgba(255, 255, 255, 0.5);
         // }
 
-        &.active {
-            position: fixed;
-            top: 50px;
-            right: 30px;
-        }
+        // &.active {
+        //     position: fixed;
+        //     top: 50px;
+        //     right: 30px;
+        // }
 
         &__line {
             display: inline-block;
