--- a/plants/sass/_hamburger.scss
+++ b/plants/sass/_hamburger.scss
@@ -2,10 +2,6 @@
     display: none;
 }
 
-.popup {
-    display: none;
-}
-
 @media (max-width: 670px) {
     .hamburger {
         display: inline-block;
@@ -13,26 +9,8 @@
         z-index: 30;
         width: 40px;
         height: 26px;
-        // border-top: 2px solid $color-additional;
-        // border-bottom: 2px solid $color-additional;
         cursor: pointer;
-        -webkit-transition: 0.4s;
-        -moz-transition: 0.4s;
-        -o-transition: 0.4s;
         transition: 0.4s;
-
-        // &:hover {
-        //     width: 50px;
-        //     height: 50px;
-        //     border-radius: 50%;
-        //     background-color: rgba(255, 255, 255, 0.5);
-        // }
-
-        // &.active {
-        //     position: fixed;
-        //     top: 50px;
-        //     right: 30px;
-        // }
 
         &__line {
             display: inline-block;
@@ -43,94 +21,85 @@
             border-top: 2px solid $color-additional;
             border-bottom: 2px solid $color-additional;
 
+            &:before,
+            &:after {
+              position: absolute;
+              width: 100%;
+              height: 1.5px;
+              background-color: $color-additional;
+              transition: 0.4s;
+            }
 
+            &:before {
+              content: '';
+              top: 0;
+            }
+
+            &:after {
+              content: '';
+              bottom: 0;
+            }
+
+            &.active {
+                border: none;
+                transition: 0.4s;
+            }
+
+            &.active:before {
+                top: calc(50% - 1px);
+                transform: rotate(45deg);
+            }
+
+            &.active:after {
+                top: calc(50% - 1px);
+                transform: rotate(-45deg);
+            }
         }
     }
 
-    // .hamburger {
-    //     // position: fixed;
-    //     // top: 10px;
-    //     // right: 10px;
-    //     // z-index: 30;
-    //     // width: 80px;
-    //     // height: 80px;
-    //     // border-radius: 50%;
-    //     // background-color: rgba(255, 255, 255, 0.5);
-
-    //   }
-    //   .hamburger:hover .hamburger__line {
-    //     filter: brightness(0.7);
-    //   }
-      
-    //   .hamburger:hover {
-    //     background-color: rgba(255, 255, 255, 0.7);
-    //   }
-      
-      .hamburger__line::before,
-      .hamburger__line::after {
-        position: absolute;
+    .nav__body {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100%;
         width: 100%;
-        height: 1.5px;
-        background-color: $color-additional;
-        -webkit-transition: 0.4s;
-        -moz-transition: 0.4s;
-        -o-transition: 0.4s;
-        transition: 0.4s;
-      }
-    //   .hamburger__line {
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -50%);
-    //   }
-      .hamburger__line::before {
-        content: '';
-        top: 0;
-      }
-      .hamburger__line::after {
-        content: '';
-        bottom: 0;
-      }
-      
-      
-      .hamburger__line.active {
-        // position: fixed;
-        border: none;
-        transition: 0.4s;
-        background-color: transparent;
-      }
+        z-index: 10;
+        background-color: rgba(0, 0, 0, 0);
+        transition: all 0.8s;
 
-      .hamburger__line.active::before {
-        top: 0;
-        transform: rotate(45deg);
-      }
-      .hamburger__line.active::after{
-        top: 0;
-        transform: rotate(-45deg);
-      }
+        &.active {
+            right: 0;
+            transition: all 0.8s;
+        }
+    }
 
     .nav {
         padding-top: 100px;
         position: fixed;
         top: 0;
+        right: -100%;
         z-index: 20;
         display: flex;
         flex-flow: column;
         justify-content: start;
         height: 100%;
         background-color: $color-light;
-        overflow-y: auto;
-        right: -100%;
-        -webkit-transition: 0.8s;
-        -moz-transition: 0.8s;
-        -o-transition: 0.8s;
-        transition: 0.8s;
+        overflow: auto;
+        transition: all 0.8s;
+
+        &.active {
+            right: 0;
+            transition: all 0.8s;
+        }
 
         &__item {
+            padding-left: 20px;
             border-top: 1px solid #fff;
             border-bottom: 1px solid #fff;
 
             &:hover {
                 border-color: $color-border;
+                transition: 0.8s;
             }
         }
 
@@ -154,29 +123,7 @@
         }
     }
 
-    .header__navigation.active .nav {
-        right: 0;
-        -webkit-transition: 0.4s;
-        -moz-transition: 0.4s;
-        -o-transition: 0.4s;
-        transition: 0.4s;
+    body.noscroll {
+        overflow: hidden;
     }
-
-
-      .burger-menu_overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: 10;
-        transition: 0.3s;
-      }
-      .header__navigation.active .burger-menu_overlay {
-        display: block;
-        background-color: rgba(0, 0, 0, 0.5);
-      }
-
-
 }
