--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -241,13 +241,30 @@ body {
 
 .footer {
   display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  height: 30vh;
+  min-height: 160px;
+  padding: 20px;
+}
+
+.lang {
+  width: 50px;
+  height: 20px;
+  color: #000;
+  font-weight: bold;
+}
+
+.quotes {
+  display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 30vh;
-  min-height: 160px;  
-  padding: 20px;
+  min-height: 160px;
+  padding: 0 20px 0 20px;
 }
 
 .change-quote {
