--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -197,7 +197,7 @@ body {
   margin-bottom: 10px;
   font-family: 'Arial-MT';
   font-size: 100px;
-  letter-spacing: -4px;  
+  letter-spacing: -4px;
 }
 
 .date {
@@ -248,9 +248,22 @@ body {
   min-height: 160px;
   padding: 20px;
 }
+.settings {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .lang {
-  width: 50px;
+  width: 65px;
+  height: 20px;
+  color: #000;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.img-source {
+  width: 65px;
   height: 20px;
   color: #000;
   font-weight: bold;
@@ -261,7 +274,7 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
+  width: 80%;
   height: 30vh;
   min-height: 160px;
   padding: 0 20px 0 20px;
