--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -160,7 +160,7 @@ body {
   background-color: transparent;
 }
 
-.city::placeholder {  
+.city::placeholder {
   font-size: 20px;
   color: #fff;
   opacity: .6;
@@ -168,13 +168,14 @@ body {
 
 .main {
   position: relative;
+  z-index: 5;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 40vh;
-  min-height: 260px;  
+  min-height: 260px;
   padding: 20px;
 }
 
@@ -253,14 +254,18 @@ body {
 }
 
 .settings {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
   color:#000;
+  font-size: 14px;
 }
 
 .settings-btn {
+  position: relative;
+  z-index: 100;
   width: 40px;
   height: 40px;
   background-size: 40px 40px;
@@ -268,26 +273,57 @@ body {
 }
 
 .setting-list {
-  width: 100px;
+  position: absolute;
+  bottom: 0;
+  z-index: 10;
+  width: 170px;
   height: 200px;
-  background-color: #fff;
+  background-color: #ffffff;
+  opacity: .7;
+  transition: background-image 1s ease-in-out;
+}
+
+.settings-item {
+  padding: 10px 0 10px;
+  border-bottom: 1px solid #838383;
+}
+
+.settings-item:last-child {
+  border: none;
+}
+
+.settings-attribute {
+  font-weight: bold;
+}
+
+.settings-options {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  text-align: left;
+}
+
+.settings-option {
+  margin-left: 10px;
+  position: relative;
+  padding: 5px;
+  padding-left: 20px;
+  list-style: none;
   opacity: .8;
+  cursor: pointer;
   transition: .3s;
 }
 
-.lang {
-  width: 65px;
-  height: 20px;
-  color: #000;
-  font-weight: bold;
-  margin-bottom: 10px;
+.settings-option:hover {
+  opacity: 1;
 }
 
-.img-source {
-  width: 65px;
-  height: 20px;
-  color: #000;
-  font-weight: bold;
+.settings-active::before {
+  content: "\2713";
+  position: absolute;
+  left: 0;
+  top: 2px;
+  font-weight: 900;
 }
 
 .quotes {
