--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -92,6 +92,10 @@ body {
   opacity: 1;
 }
 
+.settings-icon.active {
+  opacity: 1;
+}
+
 .player-icon:active,
 .slider-icon:active,
 .change-quote:active,
@@ -260,7 +264,7 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
-  color:#000;
+  color:#ffffff;
   font-size: 14px;
 }
 
@@ -273,14 +277,24 @@ body {
   background-image: url("../assets/svg/settings.svg");
 }
 
+.settings-btn:active {
+  transform: rotate(120deg);
+  transition: transform .3s ease-out;
+}
+
+.settings-btn.active:active {
+  transform: none;
+  transition: none;
+}
+
 .setting-list {
   position: absolute;
-  bottom: 0;
+  bottom: 50px;
   z-index: 10;
   width: 170px;
-  height: 350px;
-  background-color: #ffffff;
-  opacity: .7;
+  height: 300px;
+  background-color: #000000;
+  opacity: .8;
   /* transition: all 1s ease-out; */
   animation: createSettingList 1s linear forwards;
 }
@@ -298,7 +312,7 @@ body {
     opacity: 0;
   }
   100% {
-    opacity: .7;
+    opacity: .8;
   }
 }
 
