--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -26,8 +26,12 @@ body {
   align-items: flex-start;
   width: 100%;
   height: 30vh;
-  min-height: 220px;  
+  min-height: 220px;
   padding: 20px;
+}
+
+.player {
+  transition: 1s;
 }
 
 .player-controls {
@@ -131,8 +135,9 @@ body {
   align-items: flex-start;
   row-gap: 5px;
   width: 180px;
-  min-height: 180px;  
+  min-height: 180px;
   text-align: left;
+  transition: 1s;
 }
 
 .weather-error {
@@ -207,12 +212,21 @@ body {
   font-size: 100px;
   letter-spacing: -4px;
   visibility: visible;
+  position: relative;
+  transition: 1s;
+  top: 0;
+}
+
+.time-hidden {
+  opacity: 0;
+  top: -50%;
 }
 
 .date {
   min-height: 28px;
   font-size: 24px;
   margin-bottom: 20px;
+  transition: 1s;
 }
 
 .greeting-container {
@@ -223,6 +237,14 @@ body {
   min-height: 48px;
   width: 90vw;
   font-size: 40px;
+  position: relative;
+  transition: 1s;
+  bottom: 0;
+}
+
+.greeting-hidden {
+  opacity: 0;
+  bottom: -50%;
 }
 
 .greeting {
@@ -299,14 +321,6 @@ body {
   animation: createSettingList 1s linear forwards;
 }
 
-/* .setting-list-none {
-  opacity: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  animation: createSettingList 1s linear forwards;
-} */
-
 @keyframes createSettingList {
   0% {
     opacity: 0;
@@ -317,9 +331,7 @@ body {
 }
 
 .hidden {
-  visibility: hidden;
-  /* transition: visibility 2s ease-out;
-  animation: visibility 1s linear forwards; */
+  opacity: 0;
 }
 
 .settings-item {
@@ -374,11 +386,19 @@ body {
   height: 30vh;
   min-height: 160px;
   padding: 0 20px 0 20px;
+  position: relative;
+  transition: 1s;
+  bottom: 0;
+}
+
+.quotes-hidden {
+  opacity: 0;
+  bottom: -50%;
 }
 
 .change-quote {
   margin-bottom: 30px;
-  background-image: url("../assets/svg/reload.svg");  
+  background-image: url("../assets/svg/reload.svg");
 }
 
 .quote {
